html code added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html>
-	<head>
-	<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta keywords="cienciaficción, multiverso, anime">
-		<title> Primera págna web</title>
-	</head>
-	<body>
-	</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="sytle.css">
+        <title>Search</title>
+    </head>
+    <body id="bdstyl">
+        <header>
+        		<ul>
+        			<a class="navg" href="imgsearch.html">images</a>
+        			<a class="navg" href="advsearch.html">advanced search</a>
+        		</ul>
+        </header>
+        
+       <div class="bigbox">
+            <div class="smallbox">
+                <div>
+                    <center><img src="googlelogo.png"></center>               
+                </div>
+                <form action="https://www.google.com/search">
+                    <center>
+                        <div><input class="srchbox" type="text" name="q"></div>
+                        <div>
+                            <input class="button" type="submit" value="Google Search">
+                            <input class="button" type="submit" value="I'm Feeling Lucky" name="btnI">
+                        </div>
+                    </center>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
