--- a/advsearch.html
+++ b/advsearch.html
@@ -3,18 +3,24 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="sytle.css">
+        <link rel="stylesheet" href="style.css">
         <title>Search</title>
     </head>
     <body id="bdstyl">
-       
         <header>
-                <ul>
-                    <a class="navg" href="index.html">all</a>
-                    <a class="navg" href="imgsearch.html">image search</a>
-                </ul>
-        </header>
-        <div>
+            <div class="hd1">
+                <div>
+                    <img class="logo" src="googlelogo.png">
+                </div>
+                <div>
+                    <ul>
+                        <a class="navg" href="index.html">all</a>
+                        <a class="navg" href="imgsearch.html">image search</a>
+                    </ul>
+                </div>
+            </div>
+        </heaer>
+        <div class="clear">
             <div class="clear">
                 <div class="src">
                     Busqueda avanzada
