--- a/imgsearch.html
+++ b/imgsearch.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="sytle.css">
+        <link rel="stylesheet" href="style.css">
         <title>Search</title>
     </head>
     <body id="bdstyl">
@@ -22,7 +22,7 @@
                     <center>
                         <form action="https://www.google.com/search">
                             <input class="srchbox" type="text" name="q">
-                            <input type="hidden" name="tbm" value="isch">
+                            <input type="hidden" name="tbm" value="isch"><br>
                             <input class="button" type="submit" value="Image Search">
                         </form>
                     </center>
